# UnblurNews

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  news_db.py  pyproject.toml  query_news.py  render.yaml  retrieve_news.py  sources.txt  testing_output.py
backend/: analyzer.py  cache.py  evaluate.py  news_fetcher.py  requirements.txt
backend/models/: README.md
extension/: content.js  manifest.json  options.html
extension/sidebar/: sidebar.css
model/: README.md  UnblurNews_Training.ipynb  __init__.py  config.py  datasets_loader.py  export_for_backend.py  inference.py  multi_head_model.py  pipeline.py  requirements.txt  train_clickbait.py  train_multitask.py  train_political.py  train_sentiment.py
testbench/: aggregate.py  charts.py  client.py  recorder.py  runner.py  users.py
testbench/corpus/: build_corpus.py  corpus.json  loader.py
unblur/: .env.example  Dockerfile  docker-compose.yml
unblur/backend/: analyzer.py  cache.py  case_logic.py  main.py  metrics.py  requirements.txt  summarizer.py
unblur/extension/: background.js
unblur/extension/sidebar/: sidebar.html  sidebar.js
