[project]
name = "unblur"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
]

[dependency-groups]
backend = [
    "fastapi>=0.139.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "safetensors>=0.8.0",
    "torch>=2.12.1",
    "transformers>=5.12.1",
    "uvicorn[standard]>=0.49.0",
]
corpus = [
    "datasets>=5.0.0",
]
